gitops/manifests/media/sabnzbd/sabnzbd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: media
  labels:
    app: sabnzbd
    app.kubernetes.io/name: sabnzbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
        app.kubernetes.io/name: sabnzbd
    spec:
      nodeSelector:
          kubernetes.io/hostname: stuart 
      securityContext:
        runAsUser: 329  #all processes in the pod run with user ID 321
        runAsGroup: 321  # same but for groups
        fsGroup: 321 # owner of attached volume is group 321 
      containers:
        - name: sabnzbd
          image: ghcr.io/hotio/sabnzbd:release-4.5.5
          securityContext:
            runAsUser: 0  # Temporary root for setup, not great, but does not work otherwise
            allowPrivilegeEscalation: true
          imagePullPolicy: Always
          ports:
          - containerPort: 8080 
          resources:
            requests:
              memory: "512Mi"  
              cpu: "50m"      
            limits:
              memory: "1G"  
              cpu: "200m"
          volumeMounts:
            - mountPath: /config  
              name: config-storage
            - mountPath: /data 
              name: media-storage
      volumes:
        - name: config-storage
          persistentVolumeClaim:
            claimName: pvc-sabnzbd-config # PVC for config storage
        - name: media-storage
          persistentVolumeClaim:
            claimName: pvc-media   # PVC for data storage
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: media
  labels:
    app.kubernetes.io/name: sabnzbd
spec:
  selector:
    app: sabnzbd
  ports:
  - name: http
    port: 80 # we talk to this
    protocol: TCP
    targetPort: 8080 # app listens here
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  labels:
    app: sabnzbd
    app.kubernetes.io/name: sabnzbd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "100"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "1000"
spec:
  ingressClassName: nginx
  rules:
  - host: sabnzbd.${DOMAIN_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sabnzbd
            port:
              number: 80
  tls:
  - hosts:
      - sabnzbd.${DOMAIN_NAME}
    secretName: letsencrypt-wildcard-cert-pengiuns.com-production
